--- a/index.html
+++ b/index.html
@@ -1,11 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    <h1>Hello everone!</h1>
+
+<body class="open-sans-normal ">
+    <header class="header secondary-bg">
+        <nav>
+            <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a href="" class="Dark-2">Portfolio</a></li>
+                <li><a href="" class="Dark-2">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greatings Dark-2">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description Dark-3">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
+        </div>
+    </header>
+    <main>
+        <!-- About section start -->
+        <div class="about default-container secondary-bg">
+            <div class="about-container ">
+                <h2 class="section-title">About Me</h2>
+                <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy
+                    developing simple, clean and slick websites that provide real value to the end user. Thousands of
+                    clients have procured exceptional resulfs while working with me. Delivering work within time and
+                    budget which meets clients requirements in our mata.
+                </p>
+                <div class="about-items">
+                    <div class="about-item">
+                        <p class="about-item-title Dark-3">Name</p>
+                        <h3 class="Dark-2 about-item-description">Mary Hardy</h3>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-item-title Dark-3">Email</p>
+                        <h3 class="Dark-2 about-item-description">info@gmail.com</h3>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-item-title Dark-3">Date Of Birth</p>
+                        <h3 class="Dark-2 about-item-description">25 November 2001</h3>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-item-title Dark-3">From</p>
+                        <h3 class="Dark-2 about-item-description">Dhaka, Bangladesh</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Skill setion start  -->
+        <div class="skill-section default-container">
+            <h2 class="section-title">What i do</h2>
+            <p class="section-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills">
+                <div class="skill">
+                    <div class="icon"><img src="./images/icons/js.png" alt="" srcset=""></div>
+                    <div class="skill-content">
+                        <h3 class="skill-title">Vanilla JavaScript</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="icon"><img src="./images/icons/react.png" alt="" srcset=""></div>
+                    <div class="skill-content">
+                        <h3 class="skill-title">react</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="icon"><img src="./images/icons/nodejs.png" alt=""></div>
+                    <div class="skill-content">
+                        <h3 class="skill-title">Node.js</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="icon"><img src="./images/icons/mongo.png" alt=""></div>
+                    <div class="skill-content">
+                        <h3 class="skill-title">Mongo DB</h3>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Resume Section Start  -->
+         <div class="resume default-container">
+            <h3 class="section-title">A Summery of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary" style="cursor: pointer;">Download CV</button>
+         </div>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
