--- a/index.html
+++ b/index.html
@@ -81,35 +81,39 @@
                     <div class="icon"><img src="./images/icons/js.png" alt="" srcset=""></div>
                     <div class="skill-content">
                         <h3 class="skill-title">Vanilla JavaScript</h3>
-                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any
+                            of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
                 <div class="skill">
                     <div class="icon"><img src="./images/icons/react.png" alt="" srcset=""></div>
                     <div class="skill-content">
                         <h3 class="skill-title">react</h3>
-                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any
+                            of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
                 <div class="skill">
                     <div class="icon"><img src="./images/icons/nodejs.png" alt=""></div>
                     <div class="skill-content">
                         <h3 class="skill-title">Node.js</h3>
-                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any
+                            of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
                 <div class="skill">
                     <div class="icon"><img src="./images/icons/mongo.png" alt=""></div>
                     <div class="skill-content">
                         <h3 class="skill-title">Mongo DB</h3>
-                        <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="skill-description">List skill/technologies here. You can change the icon above to any
+                            of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Resume Section Start  -->
-         <div class="resume default-container">
+        <div class="resume default-container">
             <h3 class="section-title">A Summery of My Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
@@ -117,22 +121,25 @@
                     <div class="experience">
                         <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </h6>
                     </div>
                     <hr>
                     <div class="experience">
                         <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </h6>
                     </div>
                     <hr>
                     <div class="experience">
                         <h4 class="experience-title">Master in Computer Engineering</h4>
                         <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </h6>
                     </div>
                 </div>
                 <div class="resume-column">
@@ -140,29 +147,54 @@
                     <div class="experience">
                         <h4 class="experience-title">Sr. Font End Developer</h4>
                         <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
-                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </h6>
                     </div>
                     <hr>
                     <div class="experience">
                         <h4 class="experience-title">Jr. Font End Developer</h4>
                         <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
-                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </h6>
                     </div>
                     <hr>
                     <div class="experience">
                         <h4 class="experience-title">HTML Developer</h4>
                         <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
-                        <h6 class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</h6>
+                        <h6 class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </h6>
                     </div>
                 </div>
             </div>
             <button class="btn-primary" style="cursor: pointer;">Download CV</button>
-         </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title flex-start">Lets Connect</h3>
+            <p class="section-description Dark-2 text-16 flex-start">Please fill out the form on this section to contact
+                with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="footer-icons flex-start">
+                <a href="https://facebook.com/soponalways"><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+                <a href="https://instagram.com/soponalways"><img src="/images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+
+            <form action="">
+                <h3 class="section-title flex-start">Let's Inbox Me</h3>
+                <input type="text" name="" id=" " placeholder="Your Name">
+                <input type="email" placeholder="Your Email" name="" id="">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Write down your message"
+                    class="massage"></textarea>
+                <input type="submit" value="Submit" class="btn-primary">
+            </form>
+        </div>
+    </footer>
 </body>
 
 </html>
